<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Deatil_Country">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardViewGraph"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="233dp"
        android:layout_marginBottom="60dp"
        android:text="@string/cardheadline"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detailCountryfullName"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardViewGraph"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="13dp"
        android:layout_toStartOf="@+id/textView7"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardViewGraph"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="13dp"
        android:layout_toStartOf="@+id/detailCountryfullName"
        android:text="@string/cardSubHead_1"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardViewGraph"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="13dp"
        android:text="@string/cardSubHead_2"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="360dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:padding="6dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/confirmed"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="44dp"
                    android:text="@string/deaths"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.062" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/recoverd"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <View
                    android:id="@+id/view"
                    android:layout_width="22dp"
                    android:layout_height="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/view_shape"
                    android:backgroundTint="@color/btn_style"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="22dp"
                    android:layout_height="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/view_shape"
                    android:backgroundTint="@color/recover_color"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.625" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="22dp"
                    android:layout_height="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/view_shape"
                    android:backgroundTint="@color/death_color"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/confrmdcard"
        android:layout_width="174dp"
        android:layout_height="152dp"
        android:layout_alignTop="@+id/deathCard"
        android:layout_alignBottom="@+id/deathCard"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:cardElevation="5dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <View
                android:id="@+id/view4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:background="@color/btn_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/confirmed"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view4"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/confrmfull"
                android:layout_width="133dp"
                android:layout_height="32dp"
                android:layout_marginTop="24dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/todyconfrm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confrmfull" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/deathCard"
        android:layout_width="174dp"
        android:layout_height="152dp"
        android:layout_above="@+id/recorverCard"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="25dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:background="@color/death_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:text="@string/deaths"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view5"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/deathfull"
                android:layout_width="132dp"
                android:layout_height="32sp"
                android:layout_marginTop="24dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/tddeath"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deathfull" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/recorverCard"
        android:layout_width="174dp"
        android:layout_height="152dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="26dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/total"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/totalfull"
                android:layout_width="132dp"
                android:layout_height="32sp"
                android:layout_marginTop="24dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/totalCard"
        android:layout_width="174dp"
        android:layout_height="152dp"
        android:layout_alignTop="@+id/recorverCard"
        android:layout_alignBottom="@+id/recorverCard"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="-1dp"
        app:cardElevation="5dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view6"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:background="@color/recover_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/recoverd"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view6" />

            <TextView
                android:id="@+id/rcvrdfull"
                android:layout_width="132dp"
                android:layout_height="32sp"
                android:layout_marginTop="24dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/tdrecorved"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rcvrdfull" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>